Links work from landingpage.

--- a/Garage3/Views/Home/Index.cshtml
+++ b/Garage3/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to our garage</h1>
+    <p>If you want to park your vehicle you need to be a member:</p>
+    <p><a class="" asp-area="" asp-controller="Members" asp-action="Create">Not a member?</a></p>
+    <p><a class="" asp-area="" asp-controller="Vehicles" asp-action="Index">Park your vehicle!</a></p>
+
 </div>
