--- a/Garage3/Views/Shared/_Layout.cshtml
+++ b/Garage3/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="Index">Members</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="CheckOut">CheckOut</a>
+                        </li>
                     </ul>
                 </div>
             </div>
