Moved the view Receipt to the Vehicles file

--- a/Garage3/Views/Shared/_Layout.cshtml
+++ b/Garage3/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="Index">Members</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Members" asp-action="CheckOut">CheckOut</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Vehicles" asp-action="CheckOut">CheckOut</a>
                         </li>
                     </ul>
                 </div>
