--- a/Garage3/Views/Members/Details.cshtml
+++ b/Garage3/Views/Members/Details.cshtml
@@ -22,6 +22,10 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Age)
         </dd>
+@*        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Vehicles.ToList()[0])
+        </dd>*@
+
     </dl>
 </div>
 <div>
