--- a/Garage3/Views/Members/Create.cshtml
+++ b/Garage3/Views/Members/Create.cshtml
@@ -17,6 +17,16 @@
                 <input asp-for="PersonalNo" class="form-control" />
                 <span asp-validation-for="PersonalNo" class="text-danger"></span>
             </div>
+             <div class="form-group">
+                <label asp-for="Name.FirstName" class="control-label"></label>
+                <input asp-for="Name.FirstName" class="form-control" />
+                <span asp-validation-for="Name.FirstName" class="text-danger"></span>
+            </div>
+        <div class="form-group">
+                <label asp-for="Name.LastName" class="control-label"></label>
+                <input asp-for="Name.LastName" class="form-control" />
+                <span asp-validation-for="Name.FirstName" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Age" class="control-label"></label>
                 <input asp-for="Age" class="form-control" />
