--- a/Garage3/Views/_ViewImports.cshtml
+++ b/Garage3/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using Garage3
 @using Garage3.Models
+@using Garage3.Models.MemberViewModels
+@using Garage3.Entities
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
