--- a/Garage3/Views/Members/Create.cshtml
+++ b/Garage3/Views/Members/Create.cshtml
@@ -1,10 +1,10 @@
-﻿@model Garage3.Entities.Member
+﻿@model Garage3.Models.MemberViewModels.MemberCreateViewModel
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Registration</h1>
 
 <h4>Member</h4>
 <hr />
@@ -18,14 +18,14 @@
                 <span asp-validation-for="PersonalNo" class="text-danger"></span>
             </div>
              <div class="form-group">
-                <label asp-for="Name.FirstName" class="control-label"></label>
-                <input asp-for="Name.FirstName" class="form-control" />
-                <span asp-validation-for="Name.FirstName" class="text-danger"></span>
+                <label asp-for="NameFirstName" class="control-label"></label>
+                <input asp-for="NameFirstName" class="form-control" />
+                <span asp-validation-for="NameFirstName" class="text-danger"></span>
             </div>
-        <div class="form-group">
-                <label asp-for="Name.LastName" class="control-label"></label>
-                <input asp-for="Name.LastName" class="form-control" />
-                <span asp-validation-for="Name.FirstName" class="text-danger"></span>
+            <div class="form-group">
+                <label asp-for="NameLastName" class="control-label"></label>
+                <input asp-for="NameLastName" class="form-control" />
+                <span asp-validation-for="NameLastName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Age" class="control-label"></label>
@@ -33,7 +33,7 @@
                 <span asp-validation-for="Age" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Add member to garage" class="btn btn-primary" />
             </div>
         </form>
     </div>
