--- a/Garage3/Views/Members/Index.cshtml
+++ b/Garage3/Views/Members/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create new member</a>
+    <a asp-action="Create">Member-registration</a>
 </p>
 <table class="table">
     <thead>
