--- a/Garage3/Views/Members/Details.cshtml
+++ b/Garage3/Views/Members/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model Garage3.Entities.Member
+﻿@model Garage3.Models.MemberViewModels.MemberDetailsViewModel
+
 
 @{
     ViewData["Title"] = "Details";
@@ -15,6 +16,18 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PersonalNo)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.NameFirstName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.NameFirstName)
+        </dd>
+             <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.NameLastName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.NameLastName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Age)
