--- a/Garage3/Views/Members/Details.cshtml
+++ b/Garage3/Views/Members/Details.cshtml
@@ -35,10 +35,14 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Age)
         </dd>
-@*        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Vehicles.ToList()[0])
-        </dd>*@
-
+        <dd class = "col-sm-10">
+            @foreach(var vehicle in Model.Vehicles)
+            {
+                <a asp-controller="Vehicles" asp-actions="Details" asp-route-id="@vehicle.Id">@vehicle.RegNo</a>
+            
+                @*@Html.DisplayFor(model => model.Vehicles.ToList()[0])*@
+            }
+        </dd>
     </dl>
 </div>
 <div>
