Changed linq expressesions for edit and details.

--- a/Garage3/Views/Members/Edit.cshtml
+++ b/Garage3/Views/Members/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@*@model Garage3.Models.MemberViewModels.MemberEditViewModel*@
-@model Garage3.Entities.Member
+@model Garage3.Models.MemberViewModels.MemberEditViewModel
 @{
     ViewData["Title"] = "Edit";
 }
@@ -18,16 +18,16 @@
                 <input asp-for="PersonalNo" class="form-control" />
                 <span asp-validation-for="PersonalNo" class="text-danger"></span>
             </div>
-            <!--div class="form-group">
+            <div class="form-group">
                 <label asp-for="NameFirstName" class="control-label"></label>
                 <input asp-for="NameFirstName" class="form-control" />
                 <span asp-validation-for="NameFirstName" class="text-danger"></span>
-            </!--div-->
-            <!--div class="form-group">
+            </div>
+            <div class="form-group">
                 <label asp-for="NameLastName" class="control-label"></label>
                 <input asp-for="NameLastName" class="form-control" />
                 <span asp-validation-for="NameLastName" class="text-danger"></span>
-            </!--div-->
+            </div>
             <div class="form-group">
                 <label asp-for="Age" class="control-label"></label>
                 <input asp-for="Age" class="form-control" />
