Work with vehicle views.

--- a/Garage3/Views/Vehicles/Index.cshtml
+++ b/Garage3/Views/Vehicles/Index.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Add your vehicle to your member account</h1>
+<p>You need to be a member before you can add your vehicle!</p>
 
 <p>
     <a asp-action="Create">Create New</a>
