--- a/Garage3/Views/Vehicles/Create.cshtml
+++ b/Garage3/Views/Vehicles/Create.cshtml
@@ -1,10 +1,10 @@
-﻿@model Garage3.Entities.Vehicle
+﻿@model VehicleCreateViewModel
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>To add a vehicle you need to be a member</h1>
 
 <h4>Vehicle</h4>
 <hr />
@@ -39,11 +39,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="MemberId" class="control-label"></label>
-                <select asp-for="MemberId" class ="form-control" asp-items="ViewBag.MemberId"></select>
+                <select asp-for="MemberId" class ="form-control" asp-items="@Model.Members"></select>
             </div>
             <div class="form-group">
                 <label asp-for="VehicleTypeId" class="control-label"></label>
-                <select asp-for="VehicleTypeId" class ="form-control" asp-items="ViewBag.VehicleTypeId"></select>
+                <select asp-for="VehicleTypeId" class ="form-control" asp-items="@Model.VehicleTypes"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
