Removed CheckOut from _Layout among others.

--- a/Garage3/Views/Vehicles/CheckOut.cshtml
+++ b/Garage3/Views/Vehicles/CheckOut.cshtml
@@ -1,9 +1,10 @@
-﻿@{
-    ViewData["Title"] = "Checking out Vehicle";
-}
-<h1>@ViewData["Title"]</h1>
+﻿@model Garage3.Entities.Vehicle
 
-<h4>You are checking out vehicle (vehicle number)</h4>
+@{
+    ViewData["Title"] = "CheckOut";
+}
+
+<h4>You are checking out vehicle</h4>
 <p>Do you want to check out?</p>
 
 <div class="column">
