Added vehicletype correction

--- a/Garage3/Views/Vehicles/Index.cshtml
+++ b/Garage3/Views/Vehicles/Index.cshtml
@@ -58,7 +58,7 @@
                 @Html.DisplayFor(modelItem => item.Member.PersonalNo)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.VehicleType.Id)
+                @Html.DisplayFor(modelItem => item.VehicleType.TypeName)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
