--- a/Garage3/Views/Vehicles/CheckOut.cshtml
+++ b/Garage3/Views/Vehicles/CheckOut.cshtml
@@ -7,15 +7,8 @@
 <h4>You are checking out vehicle</h4>
 <p>Do you want to check out?</p>
 
-<div class="column">
-    <div class="col-md-4">
-        <form asp-action="Receipt">
-               
-                <input type="submit" value="Confirm checkout" class="btn btn-primary" />
-        </form>
-        <form asp-action="Index">
-               
-                <input type="submit" value="Go back to the Garage" class="btn btn-primary" />
-        </form>
-    </div>
+
+<div style="width:100%;" id="inlinebutton">
+    <a asp-action = "Receipt"><button type="submit" class="btn btn-primary">Yes</button></a>
+    <a asp-action = "Index"><button type="submit" class="btn btn-white">No</button></a>
 </div>
